# jucecmakebase

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmakemodules/: CollectJuceFiles.cmake  GetGitRevisionDescription.cmake
juce_static/: CMakeLists.txt  Juce.jucer
projects/: CMakeLists.txt
projects/JuceApp/: CMakeLists.txt  JuceApp.jucer
projects/JuceApp/Source/: MainComponent.cpp  MainComponent.h
projects/JuceLib/: CMakeLists.txt  JuceLib.jucer
projects/JuceLib/Source/: Example.cpp  Example.h
